got the location selection to work

--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -4,3 +4,5 @@ pod 'FontAwesomeKit', '~> 2.1.0'
 pod 'DBCamera', '~> 1.0.1'
 pod 'TTTAttributedLabel'
 pod 'PrettyTimestamp'
+pod 'Foursquare-API-v2', '~> 1.4.4'
+pod 'MBProgressHUD', '~> 0.8'
