--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -6,3 +6,4 @@ pod 'TTTAttributedLabel'
 pod 'PrettyTimestamp'
 pod 'Foursquare-API-v2', '~> 1.4.4'
 pod 'MBProgressHUD', '~> 0.8'
+pod 'ALAssetsLibrary-CustomPhotoAlbum'
