update homefeed with profile image

--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -7,3 +7,4 @@ pod 'PrettyTimestamp'
 pod 'Foursquare-API-v2', '~> 1.4.4'
 pod 'MBProgressHUD', '~> 0.8'
 pod 'ALAssetsLibrary-CustomPhotoAlbum'
+pod 'GCPlaceholderTextView', '~> 1.0'
