--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -8,3 +8,4 @@ pod 'Foursquare-API-v2', '~> 1.4.4'
 pod 'MBProgressHUD', '~> 0.8'
 pod 'ALAssetsLibrary-CustomPhotoAlbum'
 pod 'GCPlaceholderTextView', '~> 1.0'
+pod 'GTScrollNavigationBar'
