add shimmering, changed some colors, deselect selected collectionviewcell when cancelled

--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -9,3 +9,4 @@ pod 'MBProgressHUD', '~> 0.8'
 pod 'ALAssetsLibrary-CustomPhotoAlbum'
 pod 'GCPlaceholderTextView', '~> 1.0'
 pod 'GTScrollNavigationBar'
+pod 'Shimmer', '~> 1.0'
