--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -9,3 +9,4 @@ pod 'ALAssetsLibrary-CustomPhotoAlbum'
 pod 'GCPlaceholderTextView', '~> 1.0'
 pod 'GTScrollNavigationBar'
 pod 'Shimmer', '~> 1.0'
+pod 'AFNetworking', '~> 2.2'
