--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -10,3 +10,4 @@ pod 'GCPlaceholderTextView', '~> 1.0'
 pod 'GTScrollNavigationBar'
 pod 'Shimmer', '~> 1.0'
 pod 'AFNetworking', '~> 2.2'
+pod 'WEPopover', '~> 1.0'
