--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '6.0'
+platform :ios, '7.0'
 
 pod 'FontAwesomeKit', '~> 2.1.0'
 pod 'DBCamera', '~> 1.0.1'
@@ -11,3 +11,4 @@ pod 'GTScrollNavigationBar'
 pod 'Shimmer', '~> 1.0'
 pod 'AFNetworking', '~> 2.2'
 pod 'WEPopover', '~> 1.0'
+pod 'SMCalloutView', '~> 2.0'
