--- a/Foodies/Podfile
+++ b/Foodies/Podfile
@@ -12,3 +12,4 @@ pod 'Shimmer', '~> 1.0'
 pod 'AFNetworking', '~> 2.2'
 pod 'WEPopover', '~> 1.0'
 pod 'SMCalloutView', '~> 2.0'
+pod 'Parse-iOS-SDK', '~> 1.2'
